# lua_binding_benchmark

./: .gitignore  .gitmodules  .travis.yml  CMakeLists.txt  Lua-CMakeLists.txt  README.md  appveyor.yml  benchmark.hpp  deploy.sh  index.html  library_info_dump.lua  multiple_lua_version_benchmark.sh  result.csv  result_system_info.txt  system_info_dump.linux.sh
benchmark/: benchmark.hpp  benchmark_runner.hpp  c_function_call.hpp  console_csvout.hpp  empostfix.js  emprefix.js  emscripten_bind.hpp  global_table.hpp  lua_function_call.hpp  object_member_call.hpp  return_class_object.hpp  std_random_bind.hpp  table_chain.hpp
result/: library_info.csv  library_info.txt  result.csv  system_info.txt
test/: kaguya.cpp  lua-intf.cpp  luabind-deboostified.cpp  luacppinterface.cpp  luwra.cpp  output_csv_title.cpp  plainapi.cpp  selene.cpp  skelton.cpp  sol.cpp  sol2.cpp
